📦 [chore]: パッケージ依存関係を更新

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "ideagram-mcp-server",
+  "name": "@sunwood-ai-labs/ideagram-mcp-server",
   "version": "0.1.0",
   "description": "A Model Context Protocol server for Ideogram API",
-  "private": true,
   "type": "module",
   "bin": {
     "ideagram-mcp-server": "./build/index.js"
@@ -23,5 +22,23 @@
   "devDependencies": {
     "@types/node": "^20.11.24",
     "typescript": "^5.3.3"
-  }
+  },
+  "keywords": [
+    "mcp",
+    "model-context-protocol",
+    "ideogram",
+    "ai",
+    "image-generation",
+    "typescript"
+  ],
+  "author": "Sunwood AI Labs",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sunwood-ai-labs/ideagram-mcp-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sunwood-ai-labs/ideagram-mcp-server/issues"
+  },
+  "homepage": "https://github.com/sunwood-ai-labs/ideagram-mcp-server#readme"
 }
